fix: hiding horizontal scroll

--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,7 @@
 html {
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
 		Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	overflow-y: hidden;
 }
 
 body {
